# rust-matching-engine

./: Cargo.toml  README.md  justfile
http-server/: Cargo.toml  README.md
http-server/src/: main.rs  middleware.rs  websocket.rs
http-server/src/models/: database.rs  mod.rs  user.rs
http-server/src/routes/: markets.rs  mod.rs  orders.rs  users.rs
matcher/: Cargo.toml  load_tester.rs  performance_analyzer.rs  run_performance_tests.sh
matcher/benches/: order_book_benchmarks.rs
matcher/src/: lib.rs  orderbook.rs  types.rs
trading-ui/: eslint.config.js  index.html  package.json  vite.config.ts
trading-ui/src/: App.tsx  main.tsx
trading-ui/src/components/: DefaultLayout.tsx
trading-ui/src/composites/: OrderForm.tsx
trading-ui/src/hooks/: useSessionValidation.ts
trading-ui/src/pages/: IndexPage.tsx  LoginPage.tsx  TradePage.tsx
trading-ui/src/stores/: userStore.ts
trading-ui/src/types/: api.ts
trading-ui/src/utils/: api.ts  prices.ts  websocket.ts
