[package]
name = "http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
matcher = { path = "../matcher" }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
