[package]
name = "matcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "performance_analyzer"
path = "performance_analyzer.rs"

[[bin]]
name = "load_tester"
path = "load_tester.rs"

[dependencies]
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "order_book_benchmarks"
harness = false
